Make further performance improvements by removing need for map in many interfaces